[gd_scene load_steps=13 format=3 uid="uid://bsdocsugbtba7"]

[ext_resource type="FontFile" uid="uid://r7guvh1d66vn" path="res://Theme/HyperSuperItalic.ttf" id="1_6fxni"]
[ext_resource type="Script" path="res://Menu/MedalMenu.gd" id="2_yq7md"]
[ext_resource type="Texture2D" uid="uid://c581j2jbggqsi" path="res://Sprites/Medals/ChronoMedal.png" id="3_hhdvd"]
[ext_resource type="Shader" uid="uid://bnnnypg6nd2fs" path="res://Menu/BlankMedal.tres" id="4_aga4m"]
[ext_resource type="Texture2D" uid="uid://35aory7p4nfg" path="res://Sprites/Medals/GoldMedal.png" id="4_jxxjp"]
[ext_resource type="Texture2D" uid="uid://f2qxo4nistek" path="res://Sprites/Medals/SilverMedal.png" id="5_bqsu6"]
[ext_resource type="Texture2D" uid="uid://ccn0rkde3jon3" path="res://Sprites/Medals/BronzeMedal.png" id="6_fqfmx"]
[ext_resource type="Texture2D" uid="uid://bn001urlc58ay" path="res://Sprites/Medals/BlitzMedal.png" id="7_nwbww"]

[sub_resource type="Theme" id="Theme_v25yg"]
default_font = ExtResource("1_6fxni")
default_font_size = 24
Label/colors/font_outline_color = Color(0, 0, 0, 1)
Label/colors/font_shadow_color = Color(0.0980392, 0.0980392, 0.0980392, 1)
Label/constants/outline_size = 6
Label/constants/shadow_offset_x = 4
Label/constants/shadow_offset_y = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pdhnn"]
content_margin_left = 8.0
content_margin_top = 8.0
content_margin_right = 8.0
content_margin_bottom = 8.0
bg_color = Color(0, 0, 0, 0.356863)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="ShaderMaterial" id="ShaderMaterial_0l4hj"]
shader = ExtResource("4_aga4m")

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_jgb4o"]
size = Vector2(31, 31)

[node name="MedalMenu" type="VBoxContainer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -143.0
offset_top = -188.5
offset_right = 143.0
offset_bottom = 188.5
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_v25yg")
script = ExtResource("2_yq7md")

[node name="Label" type="Label" parent="."]
layout_mode = 2
text = "MEdals"
horizontal_alignment = 1

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_pdhnn")

[node name="VBoxContainer3" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/VBoxContainer3"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer3/VBoxContainer"]
layout_mode = 2
text = "Total Time:"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer3/VBoxContainer"]
layout_mode = 2

[node name="TotalTimeMedals" type="VBoxContainer" parent="PanelContainer/VBoxContainer3/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 0

[node name="ChronoMedal" type="TextureRect" parent="PanelContainer/VBoxContainer3/VBoxContainer/HBoxContainer/TotalTimeMedals"]
custom_minimum_size = Vector2(31, 0)
layout_mode = 2
texture = ExtResource("3_hhdvd")
expand_mode = 5

[node name="EmptyMedal" type="TextureRect" parent="PanelContainer/VBoxContainer3/VBoxContainer/HBoxContainer/TotalTimeMedals"]
visible = false
material = SubResource("ShaderMaterial_0l4hj")
custom_minimum_size = Vector2(31, 0)
layout_mode = 2
texture = SubResource("PlaceholderTexture2D_jgb4o")
expand_mode = 5

[node name="GoldMedal" type="TextureRect" parent="PanelContainer/VBoxContainer3/VBoxContainer/HBoxContainer/TotalTimeMedals"]
custom_minimum_size = Vector2(31, 0)
layout_mode = 2
texture = ExtResource("4_jxxjp")
expand_mode = 5

[node name="EmptyMedal2" type="TextureRect" parent="PanelContainer/VBoxContainer3/VBoxContainer/HBoxContainer/TotalTimeMedals"]
visible = false
material = SubResource("ShaderMaterial_0l4hj")
custom_minimum_size = Vector2(31, 0)
layout_mode = 2
texture = SubResource("PlaceholderTexture2D_jgb4o")
expand_mode = 5

[node name="SilverMedal" type="TextureRect" parent="PanelContainer/VBoxContainer3/VBoxContainer/HBoxContainer/TotalTimeMedals"]
custom_minimum_size = Vector2(31, 0)
layout_mode = 2
texture = ExtResource("5_bqsu6")
expand_mode = 5

[node name="EmptyMedal3" type="TextureRect" parent="PanelContainer/VBoxContainer3/VBoxContainer/HBoxContainer/TotalTimeMedals"]
visible = false
material = SubResource("ShaderMaterial_0l4hj")
custom_minimum_size = Vector2(31, 0)
layout_mode = 2
texture = SubResource("PlaceholderTexture2D_jgb4o")
expand_mode = 5

[node name="BronzeMedal" type="TextureRect" parent="PanelContainer/VBoxContainer3/VBoxContainer/HBoxContainer/TotalTimeMedals"]
custom_minimum_size = Vector2(31, 0)
layout_mode = 2
texture = ExtResource("6_fqfmx")
expand_mode = 5

[node name="EmptyMedal4" type="TextureRect" parent="PanelContainer/VBoxContainer3/VBoxContainer/HBoxContainer/TotalTimeMedals"]
visible = false
material = SubResource("ShaderMaterial_0l4hj")
custom_minimum_size = Vector2(31, 0)
layout_mode = 2
texture = SubResource("PlaceholderTexture2D_jgb4o")
expand_mode = 5

[node name="Control2" type="Control" parent="PanelContainer/VBoxContainer3/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/VBoxContainer3/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer3/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Chrono Medal"
vertical_alignment = 1

[node name="Label2" type="Label" parent="PanelContainer/VBoxContainer3/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Gold"
vertical_alignment = 1

[node name="Label3" type="Label" parent="PanelContainer/VBoxContainer3/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Silver"
vertical_alignment = 1

[node name="Label4" type="Label" parent="PanelContainer/VBoxContainer3/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Bronze"
vertical_alignment = 1

[node name="Control" type="Control" parent="PanelContainer/VBoxContainer3/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2

[node name="VBoxContainer3" type="VBoxContainer" parent="PanelContainer/VBoxContainer3/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10

[node name="BuilderTotalTime" type="Label" parent="PanelContainer/VBoxContainer3/VBoxContainer/HBoxContainer/VBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
text = "01:23:456"
horizontal_alignment = 2
vertical_alignment = 1

[node name="GoldTotalTime" type="Label" parent="PanelContainer/VBoxContainer3/VBoxContainer/HBoxContainer/VBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
text = "01:28:456"
horizontal_alignment = 2
vertical_alignment = 1

[node name="SilverTotalTime" type="Label" parent="PanelContainer/VBoxContainer3/VBoxContainer/HBoxContainer/VBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
text = "01:36:856"
horizontal_alignment = 2
vertical_alignment = 1

[node name="BronzeTotalTime" type="Label" parent="PanelContainer/VBoxContainer3/VBoxContainer/HBoxContainer/VBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
text = "01:36:856"
horizontal_alignment = 2
vertical_alignment = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="PanelContainer/VBoxContainer3/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer3/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Personal Best:"

[node name="TotalTimePBLabel" type="Label" parent="PanelContainer/VBoxContainer3/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 10
text = "01:45:690"
horizontal_alignment = 2

[node name="HSeparator" type="HSeparator" parent="PanelContainer/VBoxContainer3"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="VBoxContainer2" type="VBoxContainer" parent="PanelContainer/VBoxContainer3"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer3/VBoxContainer2"]
layout_mode = 2
text = "Best Lap:"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer3/VBoxContainer2"]
layout_mode = 2

[node name="LapTimeMedals" type="VBoxContainer" parent="PanelContainer/VBoxContainer3/VBoxContainer2/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 0

[node name="TextureRect" type="TextureRect" parent="PanelContainer/VBoxContainer3/VBoxContainer2/HBoxContainer/LapTimeMedals"]
custom_minimum_size = Vector2(31, 0)
layout_mode = 2
texture = ExtResource("7_nwbww")
expand_mode = 5

[node name="EmptyMedal" type="TextureRect" parent="PanelContainer/VBoxContainer3/VBoxContainer2/HBoxContainer/LapTimeMedals"]
visible = false
material = SubResource("ShaderMaterial_0l4hj")
custom_minimum_size = Vector2(31, 0)
layout_mode = 2
texture = SubResource("PlaceholderTexture2D_jgb4o")
expand_mode = 5

[node name="TextureRect2" type="TextureRect" parent="PanelContainer/VBoxContainer3/VBoxContainer2/HBoxContainer/LapTimeMedals"]
custom_minimum_size = Vector2(31, 0)
layout_mode = 2
texture = ExtResource("4_jxxjp")
expand_mode = 5

[node name="EmptyMedal2" type="TextureRect" parent="PanelContainer/VBoxContainer3/VBoxContainer2/HBoxContainer/LapTimeMedals"]
visible = false
material = SubResource("ShaderMaterial_0l4hj")
custom_minimum_size = Vector2(31, 0)
layout_mode = 2
texture = SubResource("PlaceholderTexture2D_jgb4o")
expand_mode = 5

[node name="TextureRect3" type="TextureRect" parent="PanelContainer/VBoxContainer3/VBoxContainer2/HBoxContainer/LapTimeMedals"]
custom_minimum_size = Vector2(31, 0)
layout_mode = 2
texture = ExtResource("5_bqsu6")
expand_mode = 5

[node name="EmptyMedal3" type="TextureRect" parent="PanelContainer/VBoxContainer3/VBoxContainer2/HBoxContainer/LapTimeMedals"]
visible = false
material = SubResource("ShaderMaterial_0l4hj")
custom_minimum_size = Vector2(31, 0)
layout_mode = 2
texture = SubResource("PlaceholderTexture2D_jgb4o")
expand_mode = 5

[node name="TextureRect4" type="TextureRect" parent="PanelContainer/VBoxContainer3/VBoxContainer2/HBoxContainer/LapTimeMedals"]
custom_minimum_size = Vector2(31, 0)
layout_mode = 2
texture = ExtResource("6_fqfmx")
expand_mode = 5

[node name="EmptyMedal4" type="TextureRect" parent="PanelContainer/VBoxContainer3/VBoxContainer2/HBoxContainer/LapTimeMedals"]
visible = false
material = SubResource("ShaderMaterial_0l4hj")
custom_minimum_size = Vector2(31, 0)
layout_mode = 2
texture = SubResource("PlaceholderTexture2D_jgb4o")
expand_mode = 5

[node name="Control2" type="Control" parent="PanelContainer/VBoxContainer3/VBoxContainer2/HBoxContainer"]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/VBoxContainer3/VBoxContainer2/HBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer3/VBoxContainer2/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Blitz Medal"
vertical_alignment = 1

[node name="Label2" type="Label" parent="PanelContainer/VBoxContainer3/VBoxContainer2/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Gold"
vertical_alignment = 1

[node name="Label3" type="Label" parent="PanelContainer/VBoxContainer3/VBoxContainer2/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Silver"
vertical_alignment = 1

[node name="Label4" type="Label" parent="PanelContainer/VBoxContainer3/VBoxContainer2/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Bronze"
vertical_alignment = 1

[node name="Control" type="Control" parent="PanelContainer/VBoxContainer3/VBoxContainer2/HBoxContainer"]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2

[node name="VBoxContainer3" type="VBoxContainer" parent="PanelContainer/VBoxContainer3/VBoxContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10

[node name="BuilderLapTime" type="Label" parent="PanelContainer/VBoxContainer3/VBoxContainer2/HBoxContainer/VBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
text = "01:23:456"
horizontal_alignment = 2
vertical_alignment = 1

[node name="GoldLapTime" type="Label" parent="PanelContainer/VBoxContainer3/VBoxContainer2/HBoxContainer/VBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
text = "01:28:456"
horizontal_alignment = 2
vertical_alignment = 1

[node name="SilverLapTime" type="Label" parent="PanelContainer/VBoxContainer3/VBoxContainer2/HBoxContainer/VBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
text = "01:36:856"
horizontal_alignment = 2
vertical_alignment = 1

[node name="BronzeLapTime" type="Label" parent="PanelContainer/VBoxContainer3/VBoxContainer2/HBoxContainer/VBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
text = "01:36:856"
horizontal_alignment = 2
vertical_alignment = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="PanelContainer/VBoxContainer3/VBoxContainer2"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer3/VBoxContainer2/HBoxContainer2"]
layout_mode = 2
text = "Personal Best:"

[node name="LapTimePBLabel" type="Label" parent="PanelContainer/VBoxContainer3/VBoxContainer2/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 10
text = "01:45:690"
horizontal_alignment = 2
